# Bode_Analyzer

./: .gitignore  LICENSE  README.md
App/: README.md  serial_read.py
App/FletApp/: debug.out  generic_include.py  main  main.py
App/FletApp/assets/: ref.py
Documentation/: README.md
Documentation/DSP/: README.md  lock_in_tb.m
Documentation/DSP/AdaptiveFilter/: adaptiveFilter.m  test_ideal_tap_weights.txt
Documentation/DSP/AdaptiveFilter/C_Adaptive_Filter_Test/: .gitignore  cleanup.sh  generateAnimation.sh  generate_png_from_csv.py  kst_representation.kst  main.c  test_ideal_tap_weights.txt
Documentation/DSP/AdaptiveFilter/C_Adaptive_Filter_Test_Var_Taps/: ideal_tap_results.csv  main.c
Documentation/DSP/FFT_Fixed_Pt/: FFT.h  Q15_sin_table.h  main.c
Documentation/DSP/Multirate_Downsampling/: README.md  multirate_downsampling.m
Documentation/Hardware/: NCP164_VDDA_Feedback.xlsx
Documentation/Prototype_Activity/CA/: adaptive_filter.py
Documentation/Prototype_Activity/JC/: Parts4Filter.txt  SeniorProject.m
Documentation/Prototype_Activity/LR/: README.md
Documentation/USB_Protocol/: Protocol.xlsx  README.md
HDL/: README.md
HDL/test/: README.md
HDL/test/lock_in_ice40/: README.md  apio.ini
PCB/ADS7253_Breakout/ads7253_breakout/: ads7253_breakout.kicad_pcb  ads7253_breakout.kicad_prl  ads7253_breakout.kicad_pro  ads7253_breakout.kicad_sch  fp-info-cache
PCB/ADS7253_Breakout/ads7253_breakout/output/: ads7253_breakout-B_Cu.gbr  ads7253_breakout-B_Mask.gbr  ads7253_breakout-B_Paste.gbr  ads7253_breakout-B_Silkscreen.gbr  ads7253_breakout-Edge_Cuts.gbr  ads7253_breakout-F_Cu.gbr  ads7253_breakout-F_Mask.gbr  ads7253_breakout-F_Paste.gbr  ads7253_breakout-F_Silkscreen.gbr  ads7253_breakout-NPTH.drl  ads7253_breakout-PTH.drl  ads7253_breakout-job.gbrjob
PCB/Dev_Platform/Bandit_Dev_Platform/: Bandit_Dev_Platform.kicad_pcb  Bandit_Dev_Platform.kicad_prl  Bandit_Dev_Platform.kicad_pro  Bandit_Dev_Platform.kicad_sch  Bandit_Dev_Platform.xml  NCP164ASNASJ_Calculator.ods  fp-info-cache  ~Bandit_Dev_Platform.kicad_sch.lck
PCB/Dev_Platform/Bandit_Dev_Platform/fab_files/: .~lock._JLC_BOM_fmt.csv#  Bandit_Dev_Platform-all-pos.csv  Bandit_Dev_Platform-all-pos_JLC_pos_fmt.csv  Bandit_Dev_Platform.csv  Bandit_Dev_Platform_JLC_BOM_fmt.csv  _JLC_BOM_fmt.csv
PCB/Dev_Platform/Bandit_Dev_Platform/gerber_outputs/: Bandit_Dev_Platform-B_Cu.gbr  Bandit_Dev_Platform-B_Mask.gbr  (+12 more)
PCB/Filter_Under_Test/Filter_Under_Test_Reference/: Filter_Under_Test_Reference.kicad_pcb  Filter_Under_Test_Reference.kicad_prl  Filter_Under_Test_Reference.kicad_pro  Filter_Under_Test_Reference.kicad_sch  fp-info-cache
PCB/Rev_0/BANDIT_Rev_0_0/: BANDIT_Rev_0_0.kicad_prl  BANDIT_Rev_0_0.kicad_pro  BANDIT_Rev_0_0.kicad_sch  ~BANDIT_Rev_0_0.kicad_sch.lck
PCB/lib/: BANDIT_PCB_Lib.kicad_sym
PCB/lib/BANDIT_PCB_Lib.pretty/: Banana_Horizontal.kicad_mod  DOSIN-801-0050.kicad_mod  Keystone 575 Banana.kicad_mod  Logo_25mm.kicad_mod  Logo_30mm.kicad_mod  Logo_50mm.kicad_mod  Logo_50mm_Light.kicad_mod  Pi Pico.kicad_mod  SOT23 Thin 14.kicad_mod
img/: README.md
src/: README.md
src/Bandit_Template/: AWGN_ROSC.h  Bandit_Debug.h  Bandit_Sampling.h  Bode_Bandit.h  CMakeLists.txt  create_makefile.sh  fixedpt_include.h  main.c  tempFLAGS.make  tempFLAGS_no_optimizations.make  usb_descriptors.c
src/Bandit_Template/Bandit_InterCore/: Bandit_Inter_Core.c  Bandit_Inter_Core.h
src/Bandit_Template/Bandit_LED/: Bandit_LED.c  Bandit_LED.h
src/Bandit_Template/Debug_Logs/: kst_representation.kst  main.c
src/Bandit_Template/Downsampling/: Fixed_Filters.c  Fixed_Filters.h
src/Bandit_Template/FFT/: Q15_cos_table.h  Q15_sin_table.h  fft_half.c  fft_half.h  fixedpt_include.h
src/Bandit_Template/FIR/: FIR_Fast_Fixed.c  FIR_Fast_Fixed.h
src/Bandit_Template/LMS/: LMS_Fixed.c  LMS_Fixed.h
src/Bandit_Template/MCP6S92_RP2040/: MCP6S92_RP2040.h
src/Bandit_Template/PIO_ADS7253/: PIO_ADS7253.c  PIO_ADS7253.h  gen_pio.sh  pio_ads7253_spi.pio.h
src/Bandit_Template/circular_buffers/: RP2040_Circ_Buffer.c  RP2040_Circ_Buffer.h
src/Bandit_Template_USB/: Bode_Bandit.h  CMakeLists.txt  fixedpt_include.h  main.c
src/Bandit_Template_USB/circular_buffers/: RP2040_Circ_Buffer.c
src/Bandit_Template_USB/linking_scripts/: memmap_custom_blocks.ld
src/C_Utilities/: README.md
src/C_Utilities/Bandit_LMS_Assistant/: errorplot.txt  fixedpt_include.h  kst_representation.kst  main.c  samplez.h  tap_output.txt
src/C_Utilities/Float_2_Q15_Converter/: README.md  main.c
src/C_Utilities/Q15_Sin_Table_Generator/: main.c
src/C_Utilities/Signal_Table_Generator/: main.c
src/Python_Utilities/: floatToFix.py
src/include/: README.md
src/tests/: .gitignore
src/tests/Bandit_ADC/: ADS7253_RP2040.c  ADS7253_RP2040.h  Bode_Bandit.h  CMakeLists.txt  Memory_Management.h  ads7253_Data_Interface.pio.h  main.c  pio_val_2_pin.pio.h  rfb.sh
src/tests/Bandit_Blink/: Bandit_Pins.h  CMakeLists.txt  README.md
src/tests/C_Circular_Buffers/: Gfx.kst  circular_buffer_one_file_test.c  coolnumbers.txt
src/tests/ROSC_AWGN_DMA_RP2040/: main.c
src/tests/ROSC_AWGN_RP2040/: main.c
src/tests/RP2040_Evaluation/: Bandit_Pins.h  Bode_Bandit.h  CMakeLists.txt  Memory_Management.h  README.md  core_0_exec.c  core_0_exec.h  core_1_exec.c  core_1_exec.h  generic_include.h  main.c
src/tests/RP2040_Evaluation/FFT/: Q15_sin_table.h  fft_half.c  fft_half.h
src/tests/RP2040_Evaluation/FFT/trig_tables/: Q15_cos_table.h  Q15_sin_table.h
src/tests/RP2040_Evaluation/circular_buffers/: RP2040_Circ_Buffer.c  RP2040_Circ_Buffer.h
src/tests/RP2040_Evaluation/linking_scripts/: memmap_custom_blocks.ld
src/tests/feature_tests/PIO_ADS7253/: ADS_CONSTANTS.h  CMakeLists.txt  main.c  pio_spi.c  pio_spi.h  spi.pio
src/tests/feature_tests/PIO_ADS7253_Library/: CMakeLists.txt  main.c
src/tests/feature_tests/PIO_ADS7253_Library/PIO_ADS7253/: PIO_ADS7253.c  PIO_ADS7253.h  pio_ads7253_spi.pio
src/tests/feature_tests/ROSC_AWGN_DMA_RP2040/: CMakeLists.txt  main.c
src/tests/feature_tests/deprecated/ADS7253_PIO/: .ads7253_pio.pio.h  CMakeLists.txt  main.c
(+35 files in other folders)
